--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,15 +9,17 @@
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "importHelpers": true,
+    "importHelpers": false,
     "target": "es2015",
-    "typeRoots": [
+    "allowJs": true,// моих рук дело
+        "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "checkJs": false
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
