--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@types/jquery": "^3.3.33",
     "expose-loader": "^0.7.5",
     "gsap": "^3.0.5",
     "imports-loader": "^0.8.0",
+    "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "script-loader": "^0.7.2",
     "scrollmagic": "^2.0.7",
+    "scrollmagic-plugin-gsap": "^1.0.4",
+    "slendr": "^1.4.1",
+    "slidr": "0.0.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
