TM-site reborn version. New main page layout is about to be being implemented

--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/style/style.css",
-              "node_modules/wowjs/css/libs/animate.css"
+              "src/style/style.css"
             ],
             "scripts": [
-              "node_modules/wowjs/dist/wow.min.js"
+
             ]
           },
           "configurations": {
