added images by Nastya. 1st and 2nd sections implemented

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/style/style.css"
+              "src/style/style.css",
+              "node_modules/swiper/css/swiper.css"
             ],
             "scripts": [
 
