--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "@types/jquery": "^3.3.33",
+    "@types/swiper": "^5.2.1",
     "expose-loader": "^0.7.5",
     "gsap": "^3.0.5",
     "imports-loader": "^0.8.0",
@@ -31,6 +32,7 @@
     "scrollmagic-plugin-gsap": "^1.0.4",
     "slendr": "^1.4.1",
     "slidr": "0.0.1",
+    "swiper": "^5.3.6",
     "tslib": "^1.10.0",
     "wowjs": "^1.1.3",
     "zone.js": "~0.9.1"
