added placeholders to other pages

--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "@types/jquery": "^3.3.33",
     "@types/swiper": "^5.2.1",
     "expose-loader": "^0.7.5",
-    "gsap": "^3.0.5",
     "imports-loader": "^0.8.0",
     "jquery": "^3.4.1",
     "ngx-wow": "^2.0.1",
     "rxjs": "~6.4.0",
     "script-loader": "^0.7.2",
-    "scrollmagic": "^2.0.7",
     "scrollmagic-plugin-gsap": "^1.0.4",
+    "scrollmagiclib": "^1.1.6",
     "slendr": "^1.4.1",
     "slidr": "0.0.1",
     "swiper": "^5.3.6",
