--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "moduleResolution": "node",
     "importHelpers": false,
     "target": "es2015",
-    "allowJs": true,// моих рук дело
-        "typeRoots": [
+    "allowJs": true, // моих рук дело
+    "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
@@ -23,6 +23,9 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "paths": {
+    "velocity": ["node_modules/velocity-animate/velocity.min.js"]
+  }
   }
 }
